--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,9 +6,11 @@ PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS onnx-ml.proto)
 message ("PROTO_SRCS = ${PROTO_SRCS}")
 message ("PROTO_HDRS = ${PROTO_HDRS}")
 
+
 # Add an executable
 add_executable(${PROJECT_NAME}
     main.cpp
+    gemm.cpp
     ${PROTO_SRCS}
     ${PROTO_HDRS})
 
@@ -23,3 +25,10 @@ target_link_libraries(${PROJECT_NAME}
     PUBLIC
     ${PROTOBUF_LIBRARIES}
 )
+
+find_package(GTest REQUIRED)
+enable_testing()
+
+add_executable(gemm_test test/gemm_test.cpp gemm.cpp)
+target_link_libraries(gemm_test GTest::GTest GTest::Main)
+add_test(NAME gemm_test COMMAND gemm_test)
