add tensor class

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,6 +11,7 @@ message ("PROTO_HDRS = ${PROTO_HDRS}")
 add_executable(${PROJECT_NAME}
     main.cpp
     gemm.cpp
+    tensor.cpp
     ${PROTO_SRCS}
     ${PROTO_HDRS})
 
@@ -32,3 +33,7 @@ enable_testing()
 add_executable(gemm_test test/gemm_test.cpp gemm.cpp)
 target_link_libraries(gemm_test GTest::GTest GTest::Main)
 add_test(NAME gemm_test COMMAND gemm_test)
+
+add_executable(tensor_test test/tensor_test.cpp tensor.cpp)
+target_link_libraries(tensor_test GTest::GTest GTest::Main)
+add_test(NAME tensor_test COMMAND tensor_test)
