--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
                 "/home/michal/code/inference_engine/models/mnist_ffn.onnx",
                 "/home/michal/code/inference_engine/inputs/image_0.ubyte",
             ]
-        }
+        },
+        "C_Cpp.default.compilerPath": "/usr/bin/clang++"
 }
 
