--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/src/engine", // Path to your executable
+            "program": "${workspaceFolder}/build/src/engine_exe", // Path to your executable
             "args": ["${workspaceFolder}/models/mnist_ffn.onnx", "haha"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
