--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,12 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Enable compiler warnings
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wno-deprecated-declarations -Wno-unused-function")
 
+# # Flags for profiling
+# set(CMAKE_CXX_FLAGS_PROFILE "${CMAKE_CXX_FLAGS_PROFILE} -g -O3 -fno-omit-frame-pointer")
+# set(CMAKE_EXE_LINKER_FLAGS_PROFILE "${CMAKE_EXE_LINKER_FLAGS_PROFILE} -g") 
+
+# set(CMAKE_BUILD_TYPE Profile)
+
 # Find Protobuf
 find_package(Protobuf REQUIRED)
 find_package(benchmark REQUIRED)
