work on graph and node representation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(engine_lib
     tensor.cpp
     input_loader.cpp
     operators.cpp
+    graph.cpp
     node.cpp
     onnx_helper.cpp
     model_loader.cpp
