Add cuda gemm implementation
Currently the performance is not always better. There's a startup cost for moving tensors to GPU.
Need to investigate the bottleneck and decide when GPU should be used.
The Gemm implementation itself is not very efficient in memory access.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,24 @@
 cmake_minimum_required(VERSION 3.22)
-project(engine)
+project(engine LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
 
-# Enable compiler warnings
+set(CMAKE_CUDA_STANDARD 17)
+set(CMAKE_CUDA_STANDARD_REQUIRED ON)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Wno-deprecated-declarations -Wno-unused-function")
 
-# set(CMAKE_BUILD_TYPE Debug)  
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
-# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-omit-frame-pointer") 
+set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xcompiler -Wall,-Wextra,-Wno-deprecated-declarations,-Wno-unused-function")
 
-# Find Protobuf
 find_package(Protobuf REQUIRED)
 find_package(benchmark REQUIRED)
 find_package(GTest REQUIRED)
+find_package(CUDA REQUIRED)
 
 include_directories(${PROTOBUF_INCLUDE_DIRS})
 
-
-# Add subdirectories
 add_subdirectory(src)
 add_subdirectory(src/test)
