--- a/model_repository/mnist.yaml
+++ b/model_repository/mnist.yaml
@@ -1,6 +1,6 @@
 model_path: /home/michal/code/inference_engine/models/mnist_ffn_complex.onnx
 model_format: onnx
-execution_provider: CPU
+execution_provider: CUDA
 batch_size: 1
 inputs:
   - name: "onnx::Flatten_0"
