update pool for latency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,7 +69,10 @@
         "variant": "cpp",
         "stack": "cpp",
         "bitset": "cpp",
-        "__nullptr": "cpp"
+        "__nullptr": "cpp",
+        "__hash_table": "cpp",
+        "__tree": "cpp",
+        "locale": "cpp"
     },
     "cmake.debugConfig": {
         "args": [
