Add Go inference server
This commit adds a Go inference server which interfaces with the engine
through CGO. Currently it does not support batching and does not
validate input shapes.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,9 @@
 # Generate the .h and .cxx files
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS onnx-ml.proto)
 
+# Force shared library
+set(BUILD_SHARED_LIBS ON)
+
 # Add an executable
 add_library(engine_lib
     gemm_cpu.cpp
