--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,10 +27,10 @@ add_library(engine_lib
 target_include_directories(engine_lib PUBLIC
     ${PROTOBUF_INCLUDE_DIRS}
     ${CMAKE_CURRENT_BINARY_DIR}
-    ${YAML_CPP_INCLUDE_DIR})
+    ${YAML_CPP_INCLUDE_DIR}
+    ${CUDAToolkit_INCLUDE_DIRS})
 
-# link the exe against the libraries
-target_link_libraries(engine_lib PUBLIC ${PROTOBUF_LIBRARIES}  yaml-cpp)
+target_link_libraries(engine_lib PUBLIC ${PROTOBUF_LIBRARIES}  yaml-cpp CUDA::cudart)
 
 add_executable(engine_exe main.cpp)
 
